refac(validation): add validation schema
